Added Boost LOG

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,4 @@ include_directories(${INCLUDE_DIRS})
 link_directories(${LIBRARY_DIRS})
 file(GLOB ENGINE_SRC "*.h" "*.cpp")
 add_executable(WebFuzzerEngine ${ENGINE_SRC})
-target_link_libraries(WebFuzzerEngine ${LIBRARIES} network-uri cppnetlib-client-connections cppnetlib-server-parsers)
+target_link_libraries(WebFuzzerEngine ${LIBRARIES} boost_log network-uri cppnetlib-client-connections cppnetlib-server-parsers)
